<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heber.week2codingtestheber.MainActivity">

    <TextView
        android:text="@string/lbl_home_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_update_delete"
        android:hint="@string/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:text="@string/lbl_btn_save_note"
        android:onClick="saveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/lbl_btn_read_all_notes"
        android:onClick="readAllNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/lbl_btn_update_note"
        android:onClick="updateNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/lbl_btn_delete_note"
        android:onClick="deleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
