<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heber.week2codingtestheber.DeleteActivity">

    <TextView
        android:text="@string/lbl_w2d3_test_1_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/lbl_btn_delete_note"
        android:onClick="deleteNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_show_results"
        android:text="@string/lbl_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
